--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   RPG By Committee is an experiment to show how well (or not at all) 
   writing a game, completely through community input, works.
 baseurl: "/RPGBC" # the subpath of your site, e.g. /blog/
-url: "http://game-designer.org/projects/RPGBC" # the base hostname & protocol for your site
+url: "http://simonmeskens.github.io/RPGBC/" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
